--- a/react_webviews/src/gold/components/Style.css
+++ b/react_webviews/src/gold/components/Style.css
@@ -1,8 +1,8 @@
 @value secondary: #35cb5d;
-.Banner {
+/* .Banner {
   position: relative;
   text-align: center;
-}
+} */
 
 /* .Banner img {
   width: 100%;
