--- a/react_webviews/src/insurance/components/Style.css
+++ b/react_webviews/src/insurance/components/Style.css
@@ -448,7 +448,7 @@ span.bold-premium {
   margin: 0 30px 0 5%;
 }
 .quote-filter-dialog-head {
-  background: #f9f9f9;
+  /* background: #f9f9f9;
   width: 96%;
   font-size: 15px;
   color: #444444;
@@ -456,7 +456,20 @@ span.bold-premium {
   text-align: center;
   padding: 13px 10px 13px 0px;
   position: fixed;
-  font-weight: 600;
+  font-weight: 600; */
+
+  background: #f9f9f9;
+    width: 100%;
+    font-size: 15px;
+    color: #444444;
+    margin: -25px 0px 0px 0px;
+    text-align: center;
+    padding: 13px 10px 13px 0px;
+    position: fixed;
+    font-weight: 600;
+    right: 0;
+    left: 0;
+    overflow: scroll !important;
 }
 .quote-confirmation-dialog-head {
   display: -webkit-inline-box;
